# metabit

./: .gitignore  Cargo.toml  LICENSE  README.md  example_config.toml
bittx/: Cargo.toml
bittx/src/: build_helper.rs  builder copy.rs  builder.rs  lib.rs  types.rs  vsize.rs
crates/bittx/: Cargo.toml
crates/bittx/src/: build_helper.rs  builder.rs  fee_rate.rs  lib.rs  lightning.rs  signer.rs  vsize.rs  witness.rs
crates/bittx/src/builder/: anchor.rs  base.rs  mod.rs  unsigned.rs
crates/datatypes/src/: types.rs
crates/mempool/src/: lib.rs  tx.rs  utxo.rs
crates/tgbot/: Cargo.toml
crates/tgbot/src/: lib.rs
crates/unsigndog/: Cargo.toml
crates/unsigndog/src/: lib.rs  main.rs
crates/unsigndog/src/checker/: mod.rs  sign.rs
crates/unsigndog/src/dog/: mod.rs  unsign.rs
crates/unsigndog/src/sender/: mod.rs  unsign.rs
crates/watchdog/: Cargo.toml  example_config.toml
crates/watchdog/src/: btcrpc.rs  checker.rs  config.rs  lib.rs  lightning.rs  main.rs  multisign.rs  receiver.rs  syncer.rs  utxo.rs
crates/watchdog/src/checker/: lightning.rs  mod.rs  sign.rs
crates/watchdog/src/dog/: mod.rs  unsign.rs
crates/watchdog/src/repo/: anchor.rs  anchor_dao.rs  indexer.rs  indexer_dao.rs  mod.rs  schame.sql
crates/watchdog/src/sender/: mod.rs  tx.rs
datatypes/: Cargo.toml
datatypes/src/: types.rs
mempool/: Cargo.toml
