[package]
name = "mempool"
version = "0.1.0"
edition = "2021"

[dependencies]
datatypes = { path = "../datatypes" }
anyhow = "1.0"
bitcoin = "0.32"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }