[package]
name = "bittx"
version = "0.1.0"
edition = "2021"
description = "A tool for someone what build bitcoin transaction."
license = "MIT"

[dependencies]
datatypes = { path = "../datatypes" }
mempool = { path = "../mempool" }

anyhow = "1.0"
bitcoin = "0.32"
bitcoincore-rpc = "0.19"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
secp256k1 = '0.29'
tokio = { version = "1", features = ["full"] }
