[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
tgbot = { path = "../tgbot" }

anyhow = "1.0"
bitcoin = "0.27"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "chrono",
    "fmt",
    "std",
] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
zmq = "0.9"
